2025-02-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): Don't touch `tramp-verbose'.

	* tramp-cache.el (with-tramp-saved-connection-properties):
	Adapt `tramp-verbose' when completing host names.

	* tramp-sh.el (tramp-methods) <plink, plinkx, pscp, psftp>:
	Adapt `tramp-login-args' and `tramp-copy-args' arguments.
	(tramp-plink-option-exists-p): New defun.
	(tramp-ssh-or-plink-options): Rename from
	`tramp-ssh-controlmaster-options'.  Adapt further plink options.
	(tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection): Adapt calls.

2025-02-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (with-tramp-saved-connection-property)
	(with-tramp-saved-connection-properties): Add traces.

	* tramp-sh.el (tramp-methods) <plink, plinkx, pscp, psftp>:
	Adapt `tramp-login-args' and `tramp-copy-args' arguments.  (Bug#75746)

2025-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive.el (tramp-archive-all-gvfs-methods): Use `cdadr'.

2025-02-13  Stefan Kangas  <stefankangas@gmail.com>

	Avoid cl-caaar etc. compatibility aliases in Tramp

	* tramp-gvfs.el (tramp-gvfs-handler-askquestion):
	(tramp-gvfs-handler-mounted-unmounted):
	(tramp-gvfs-connection-mounted-p):
	* tramp-sh.el (tramp-sh-gio-monitor-process-filter):
	(tramp-sh-inotifywait-process-filter): Don't use cl-caaar
	etc. compatibility aliases.  (Bug#76249)

2025-02-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-monitor-process-filter):
	* tramp-sh.el (tramp-sh-gio-monitor-process-filter)
	(tramp-sh-inotifywait-process-filter): Use `insert-special-event'
	if possible.

2025-02-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-connection-properties): Add link to the
	Tramp manual in the docstring.

2025-01-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-temporary-file-directory): Simplify.

2025-01-19  Michael Albinus  <michael.albinus@gmx.de>
