@@ -245,6 +245,8 @@ value is the default binding of the variable."
 ;;
 ;; * Use `with-environment-variables'.
 ;;
+;; * Use `ensure-list'.
+;;
 ;; * Starting with Emacs 29.1, use `buffer-match-p'.
 ;;
 ;; * Starting with Emacs 29.1, use `string-split'.
