@@ -1,3 +1,13 @@
+2025-02-19  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-cache.el (with-tramp-saved-connection-property): Fix typo.
+
+	* tramp-compat.el: Add TODO.
+
+	* tramp-sh.el (tramp-find-executable): Simplify, using "type -P ...".
+	(tramp-set-remote-path): Better handling of superlong $PATH.
+	(tramp-get-remote-path): Adapt/use connection properties.
+
 2025-02-15  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-file-name-handler): Don't touch `tramp-verbose'.
